Bug 501400 - Third party wallpaper plugin doesn't load its built-in translations like widgets do
Summary: Third party wallpaper plugin doesn't load its built-in translations like widg...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 6.3.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-12 10:31 UTC by Luis Bocanegra
Modified: 2026-02-04 17:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.6
Sentry Crash Report:


Attachments
wallpaper plugin with translations (51.19 KB, application/zip)
2025-03-12 10:31 UTC, Luis Bocanegra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luis Bocanegra 2025-03-12 10:31:03 UTC
Created attachment 179337 [details]
wallpaper plugin with translations

SUMMARY

I am trying to add localization support to a third-party wallpaper plugin ([smart-video-wallpaper-reborn](https://github.com/luisbocanegra/plasma-smart-video-wallpaper-reborn)), but translations are not loading when they are built into the wallpaper (`contents/translations/`).

STEPS TO REPRODUCE

1. Install attached plasma-smart-video-wallpaper-reborn-v2.0.0.zip
2. Change the system language to es/pt_BR
3. Reboot then open the wallpaper plugin settings

OBSERVED RESULT

Wallpaper and its settings are still in english

EXPECTED RESULT

Wallpaper should follow use the provided translations

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.11.0
Qt Version: 6.8.2
Kernel Version: 6.13.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-9750H CPU @ 2.60GHz
Memory: 31.2 GiB of RAM
Graphics Processor: Intel® UHD Graphics 630

ADDITIONAL INFORMATION

If I copy the translation files to `/usr/share/locale` or `~/.local/share/locale/` then they load only [if the translation domain is passed on all translatable strings `i18nd()`](https://github.com/luisbocanegra/plasma-smart-video-wallpaper-reborn/commit/346dbbd48364038b991f95a8db8f28b2f4586b57) and this confuses me even more because widgets for example don't require passing domain.
Comment 1 Méven 2025-03-12 11:23:53 UTC
This is not a bug in any KDE software.

Refer to
https://doc.qt.io/qt-6/i18n-source-translation.html

You can also check how KDE Plasma code does it.

Question is here:
https://discuss.kde.org/t/third-party-wallpaper-plugin-cant-load-its-built-in-translations-like-widgets-do/30986/3?u=meven
Comment 2 Luis Bocanegra 2026-01-26 19:33:09 UTC
Reopening because I needed to patch libplasma to make it work
Comment 3 Bug Janitor Service 2026-01-26 20:14:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libplasma/-/merge_requests/1422
Comment 4 Nate Graham 2026-02-04 17:02:52 UTC
Git commit eb3dc2696ae53958fb02e258351a5ccb9fb8337b by Nate Graham, on behalf of Luis Bocanegra.
Committed on 04/02/2026 at 17:02.
Pushed by ngraham into branch 'master'.

Enable wallpaper plugins to load translations from the KPackage

This allows third-party plugins to ship translations in
`contents/locale/$language/LC_MESSAGES/$domain.mo`, like applets do
since https://phabricator.kde.org/D5209
FIXED-IN: 6.5.6

M  +6    -0    src/plasmaquick/plasmoid/wallpaperitem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/eb3dc2696ae53958fb02e258351a5ccb9fb8337b
Comment 5 Nate Graham 2026-02-04 17:09:34 UTC
Git commit a9a4e8c0ce63f118355ac24f416983252a96454b by Nate Graham.
Committed on 04/02/2026 at 17:05.
Pushed by ngraham into branch 'Plasma/6.6'.

Enable wallpaper plugins to load translations from the KPackage

This allows third-party plugins to ship translations in
`contents/locale/$language/LC_MESSAGES/$domain.mo`, like applets do
since https://phabricator.kde.org/D5209
FIXED-IN: 6.5.6


(cherry picked from commit eb3dc2696ae53958fb02e258351a5ccb9fb8337b)

379c150d Enable wallpaper plugins to load translations from the kpackage

Co-authored-by: Luis Bocanegra <luisbocanegra17b@gmail.com>

M  +6    -0    src/plasmaquick/plasmoid/wallpaperitem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/a9a4e8c0ce63f118355ac24f416983252a96454b
Comment 6 Nate Graham 2026-02-04 17:12:13 UTC
Git commit e5a9ab13cbbcf834e801660e462b5ca465725685 by Nate Graham.
Committed on 04/02/2026 at 17:06.
Pushed by ngraham into branch 'Plasma/6.5'.

Enable wallpaper plugins to load translations from the KPackage

This allows third-party plugins to ship translations in
`contents/locale/$language/LC_MESSAGES/$domain.mo`, like applets do
since https://phabricator.kde.org/D5209
FIXED-IN: 6.5.6


(cherry picked from commit eb3dc2696ae53958fb02e258351a5ccb9fb8337b)

379c150d Enable wallpaper plugins to load translations from the kpackage

Co-authored-by: Luis Bocanegra <luisbocanegra17b@gmail.com>

M  +6    -0    src/plasmaquick/plasmoid/wallpaperitem.cpp

https://invent.kde.org/plasma/libplasma/-/commit/e5a9ab13cbbcf834e801660e462b5ca465725685