Enable wallpaper plugins to load translations from the KPackage

This allows third-party plugins to ship translations in
`contents/locale/$language/LC_MESSAGES/$domain.mo`, like applets do
since https://phabricator.kde.org/D5209

BUG: 501400
FIXED-IN: 6.5.6